# goit-pythonweb-hw-08

./: .gitignore  main.py  pyproject.toml
migrations/versions/: 9707c2a73ada_initial_migration.py
src/api/: contacts.py
src/conf/: config.py
src/database/: models.py
src/repository/: contacts.py
src/services/: contacts.py
